--- a/app/src/main/res/layout/activity_add_task.xml
+++ b/app/src/main/res/layout/activity_add_task.xml
@@ -19,14 +19,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_begin="32dp"/>
+        app:layout_constraintGuide_begin="24dp"/>
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guide_end"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_end="32dp"/>
+        app:layout_constraintGuide_end="24dp"/>
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/tl_titulo"
@@ -126,7 +126,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
         style="@style/Widget.MaterialComponents.Button"
-        android:text="@string/text_criar_tarefa"
+        android:text="@string/tb_titulo"
         android:textAllCaps="false"
         app:layout_constraintStart_toStartOf="@id/guide_start"
         app:layout_constraintEnd_toEndOf="@id/guide_end"
