--- a/app/src/main/res/layout/item_task.xml
+++ b/app/src/main/res/layout/item_task.xml
@@ -29,6 +29,7 @@
         app:layout_constraintStart_toStartOf="@id/tv_titulo"/>
 
     <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/iv_popupMenu"
         android:layout_width="36dp"
         android:layout_height="36dp"
         app:srcCompat="@drawable/ic_more_vert"
